Added About page

--- a/Project Prototype/Django/pracsite/polls/templates/polls/index.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/index.html
@@ -22,8 +22,14 @@
          
         background-color: #262626 !important; 
     }
+    #about {
+        position: absolute;
+        right: 1%;
+        top: 1%;
+    }
    </style>
 
 
 <input type="button" class="btn btn-primary btn-lg btn1" name="add_btn" onclick="location.href='{% url 'polls:add_view' %}'" value="Add"/>
 <input type="button" class="btn btn-primary btn-lg btn2" name="search_btn" onclick="location.href='{% url 'polls:search_view' %}'" value="Search"/>
+<input type="button" class="btn btn-outline-primary btn-sm" name="about_button" value="About" id="about" onclick="location.href='{% url 'polls:about_view' %}'">
