--- a/Project Prototype/Django/pracsite/polls/templates/polls/call.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/call.html
@@ -3,10 +3,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
-</style>
 <body>
 <div class="container" id="primary">
-    <h1>Customer Form</h1>
+    <h1>Call Record Form</h1>
     <br><br><br>
     <form method="post">
         {% csrf_token %}
