--- a/Project Prototype/Django/pracsite/polls/templates/polls/search.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/search.html
@@ -1,18 +1,10 @@
+{% load static %}
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
-<style type="text/css">
-    body { 
-        text-align: center;
-        color: white;
-        background-color: #262626 !important; 
-    }
-    form {
-    display: inline-block;
-}
-</style>
 <body>
-<div class="container">
+<div class="container" id="primary">
     <h1>Search Form</h1>
     <br><br><br>
     <form method="post">
@@ -21,4 +13,6 @@
         <button class="btn btn-primary btn-lg btn1" type="submit">Next</button>
     </form>
 </div>
+<button class="btn btn-primary btn-lg" id="back_btn" 
+    onclick="location.href='{% url 'polls:index' %}'">Back</button>
 </body>
