--- a/Project Prototype/Django/pracsite/polls/templates/polls/index.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/index.html
@@ -1,10 +1,14 @@
+{% load static %}
+<title>
+    ConnectHear | DBMS
+</title>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <style type="text/css">
     .btn1 {
         position: absolute;
-        top: 70%;
+        top: 75%;
         left: 60%;
         width: 10%;
         height: 10%;
@@ -12,7 +16,7 @@
       }
     .btn2 {
         position: absolute;
-        top: 70%;
+        top: 75%;
         left: 80%;
         width: 10%;
         height: 10%;
@@ -25,11 +29,28 @@
     #about {
         position: absolute;
         right: 1%;
-        top: 1%;
+        top: 12%;
+    }
+    #header {
+        background-color: #0275d8 !important;
+        color: white;
+        padding-left: 10px;
+        padding-bottom: 5px;
+        box-shadow: 0px 1px 5px black;
+        font-size: 45px;
+    }
+    img {
+        position: absolute;
+        right: 1%;
+        top: 2%;
+        zoom: 0.035;
     }
    </style>
 
-
+<div id="header" class="display-4">
+        <img src="{% static "polls/ch_logo.png" %}">
+    Database Management Service
+</div>
 <input type="button" class="btn btn-primary btn-lg btn1" name="add_btn" onclick="location.href='{% url 'polls:add_view' %}'" value="Add"/>
 <input type="button" class="btn btn-primary btn-lg btn2" name="search_btn" onclick="location.href='{% url 'polls:search_view' %}'" value="Search"/>
 <input type="button" class="btn btn-outline-primary btn-sm" name="about_button" value="About" id="about" onclick="location.href='{% url 'polls:about_view' %}'">
