--- a/Project Prototype/Django/pracsite/polls/templates/polls/project.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/project.html
@@ -3,9 +3,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
+<style type="text/css">
+    #header {
+    background-color: #0275d8 !important;
+    color: white;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    box-shadow: 0px 1px 5px black;
+    font-size: 45px;
+    }
+    #logo {
+    position: absolute;
+    right: 1%;
+    top: 2%;
+    zoom: 0.035;
+    }
+</style>
 <body>
+        <div class="display-4" id='header'>
+                <img src="{% static "polls/ch_logo.png" %}" id="logo">
+                Add Projects
+            </div>
 <div class="container" id="primary">
-    <h1>Project Form</h1>
     <br><br><br>
     <form method="post">
         {% csrf_token %}
