--- a/Project Prototype/Django/pracsite/polls/templates/polls/add.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/add.html
@@ -19,6 +19,11 @@
     top: 2%;
     zoom: 0.035;
     }
+    #logout {
+        position: absolute;
+        right: 1%;
+        top: 12%;
+    }
 </style>
 <body>
     <div class="display-4" id='header'>
@@ -35,5 +40,6 @@
     </div>
     <button class="btn btn-primary btn-lg" id="back_btn" 
     onclick="location.href='{% url 'polls:index' %}'">Back</button>
+    <input type="button" class="btn btn-outline-primary btn-sm" name="about_button" value="Logout" id="logout" onclick="location.href='{%  url 'polls:logout_view' %}'">
 </body>
 </html>
