--- a/Project Prototype/Django/pracsite/polls/templates/polls/login.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+<html>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
@@ -18,26 +19,26 @@
     top: 2%;
     zoom: 0.035;
     }
-    #logout {
-        position: absolute;
-        right: 1%;
-        top: 12%;
-    }
 </style>
 <body>
     <div class="display-4" id='header'>
         <img src="{% static "polls/ch_logo.png" %}" id="logo">
-        Add Company
+        Login
     </div>
-<div class="container" id="primary">
-    <br><br><br>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-primary btn-lg btn1" type="submit">Submit</button>
-    </form>
-</div>
-<button class="btn btn-primary btn-lg" id="back_btn" 
-    onclick="location.href='{% url 'polls:add_view' %}'">Back</button>
-    <input type="button" class="btn btn-outline-primary btn-sm" name="about_button" value="Logout" id="logout" onclick="location.href='{%  url 'polls:logout_view' %}'">
+    <div class="container" id="primary">
+        <br><br><br>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-primary btn-lg btn1" type="submit">Login</button>
+        </form>
+        {% if messages %}
+        <ul class="messages" style="list-style-type:none">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
 </body>
+</html>
