--- a/Project Prototype/Django/pracsite/polls/templates/polls/search.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/search.html
@@ -18,6 +18,11 @@
     top: 2%;
     zoom: 0.035;
     }
+    #logout {
+        position: absolute;
+        right: 1%;
+        top: 12%;
+    }
 </style>
 <body>
         <div class="display-4" id='header'>
@@ -34,4 +39,5 @@
 </div>
 <button class="btn btn-primary btn-lg" id="back_btn" 
     onclick="location.href='{% url 'polls:index' %}'">Back</button>
+    <input type="button" class="btn btn-outline-primary btn-sm" name="about_button" value="Logout" id="logout" onclick="location.href='{%  url 'polls:logout_view' %}'">
 </body>
