Added Results Page, Enabled Login Control on Results Page, Wrote Filter Queries from DB for Results Page.

--- a/Project Prototype/Django/pracsite/polls/templates/polls/search.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/search.html
@@ -34,7 +34,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-primary btn-lg btn1" type="submit">Next</button>
+        <button class="btn btn-primary btn-lg btn1" type="submit">Search</button>
     </form>
 </div>
 <button class="btn btn-primary btn-lg" id="back_btn" 
