--- a/Project Final Submission/polls/templates/polls/login.html
+++ b/Project Final Submission/polls/templates/polls/login.html
@@ -29,7 +29,10 @@
         <br><br><br>
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            <table>
+                {{ form.as_table }}
+                </table>
+                <br><br>
             <button class="btn btn-primary btn-lg btn1" type="submit">Login</button>
         </form>
         {% if messages %}
