--- a/Project Prototype/Django/pracsite/polls/templates/polls/about.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/about.html
@@ -71,7 +71,14 @@
                 <td><h5 class="font-weight-light">Owais Bin Asad</h5></td>                    
             </tr>
         </table>
-
+        <table align="center">
+            <tr>
+                <img src="{% static "polls/ayaz.png" %}" alt="Dr. Ayaz" width=230 height=230 id="pp">
+            </tr>
+            <tr>
+                <td><h5 class="font-weight-light">Owais Bin Asad</h5></td>                    
+            </tr>
+        </table>
 
 
     </div>
