--- a/Project Prototype/Django/pracsite/polls/templates/polls/search.html
+++ b/Project Prototype/Django/pracsite/polls/templates/polls/search.html
@@ -24,7 +24,7 @@
         var contentOptions = ["Title", "Interpreter"];
 
         var studentValues = ["name", "age", "gender", "mobile_no", "address",
-        "level", "classification", "occupation", "city", "batch_no", "trainer"];
+        "level", "classification", "occupation", "city", "trainer"];
         var studentOptions = ["Name", "Age", "Gender", "Mobile Number", "Address",
         "Level", "Classification", "Occupation", "City", "Batch Number", "Trainer"];
 
@@ -119,8 +119,7 @@
         "interpreter", "Client", "Location", "Purpose",
         "Interpreter"]
 
-        var ints = ["age", "mobile_no", "PoC_mobile_no", 
-        "batch_no", "CustomerRating", "InterpreterRating"]
+        var ints = ["age", "mobile_no", "PoC_mobile_no", "CustomerRating", "InterpreterRating"]
 
         if (!isNaN(input) && texts.includes(type) ) {
             document.getElementById("id_name").value = ""
